# c-snake

./: CMakeLists.txt
.cache/clangd/index/: color.h.671463638AA9E45A.idx  color.h.DBF08B290C39F196.idx  game.c.03688C8982242401.idx  game.c.20B27FE17FCE8675.idx  game.h.122B49D04FC09C7D.idx  game.h.2CCCBDA2E817EE63.idx  main.c.67D676FEEC79CF44.idx  main.c.F3DDB889945924E4.idx  platform.c.48BC0CF89BE69451.idx  platform.c.A853D04F6B9ED400.idx  platform.h.14B7CA5D13494DBA.idx  platform.h.1A7439F109A082B9.idx
src/: color.h  game.c  game.h  input.h  main.c  platform.c  platform.h
